Portfolio/assets/css/main.sass
$primary: #F4BC16
$grey-darken: #616161

nav
  background-color: rgba(255, 255, 255, 0.9)
  box-shadow: none
  -webkit-box-shadow: none
  ul
    a
      font-weight: lighter
      color: $grey-darken
    a:hover
      color: $primary
      background-color: transparent

.button-collapse
  position: relative
  div
    position: absolute
    top: 50%
    transform: translateY(-50%)
    span
      display: block
      margin: 3px 0
      background: $primary
      width: 25px
      height: 3px

.brand-logo
  font-weight: 700
  color: $primary !important
  text-transform: uppercase

.landing-page
  position: relative
  height: 80vh
  background: url("https://images.unsplash.com/photo-1443770760695-e1bfa3e62229?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=") center center
  background-size: cover
  background-repeat: no-repeat
  background-color: rgba(0, 0, 0, 0.9)
  overflow: hidden

.curve
  position: absolute
  z-index: 10
  bottom: -50px
  width: 2500px
  height: 148px
  left: -100px
  background: white
  transform: rotate(-3deg)
  padding-top: 10px
  border-top: solid $primary 10px
  box-sizing: border-box

.welcome
  padding-top: 10%
  text-align: center
  color: white
  h1
    margin-top: 0

.overlay
  width: 100%
  height: 100%
  background-color: rgba(0, 0, 0, 0.3)

.about
  margin-bottom: 50px
  h4
    color: $primary
    margin-bottom: 0
  p
    margin-top: 5px

    a
      padding: 0
      color: $primary

  img
    display: block
    padding-bottom: 10px

  a
    padding: 0 10px
    color: rgba(0, 0 , 0, 0.87)

  a .fa-github:hover
    color: #24292e

  a .fa-linkedin:hover
    color: rgb(0, 119, 181)

.links
  width: 400px
  overflow: hidden
  text-align: center

.center
  text-align: center

.hr
  width: 50px
  border: 1px solid $primary
  margin-bottom: 5%

.skills
  padding: 50px 0
  background: #f5f5f5
  h5
    text-align: center
    color: #424242
  hr
    margin-bottom: 3%
  p
    text-align: center
    padding-bottom: 20px

.html
  background-color: #f57c00 !important

.css
  background-color: #00b0ff !important

.javascript
  background-color: #ffd600 !important

.nodejs
  background-color: #8bc34a !important

.portfolio
  padding: 50px 0

.thumbs
  .thumb-unit
    margin-bottom: 20px
    position: relative
    opacity: 0
    transform: translateX(20px)
    transition: all 0.3s ease-in-out
    overflow: hidden
    cursor: pointer

    &.is-showing
      opacity: 1
      transform: translateX(0px)

    img
      display: block
      transform: scale(1)
      transition: all 0.3s ease-in-out

    &:hover
      p
        left: 0%

      img
        transform: scale(1.1)

    p
      position: absolute
      bottom: 10px
      left: -100%
      background: black
      color: white
      padding: 2px 8px
      font-size: 11px
      transition: all 0.3s ease-in-out

.parallax
  background: url("https://images.unsplash.com/photo-1428447207228-b396f310848b?dpr=1&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=") center center
  height: 20rem
  background-attachment: fixed
  background-repeat: no-repeat
  background-size: cover

  .overlay
    display: flex
    justify-content: center
    align-items: center

  p
    display: inherit
    color: white
    text-align: center
    font-weight: 400

.contact
  padding: 50px 0

  .email
    display: flex
    justify-content: center
    align-items: center
    margin-bottom: 5%

    a
      font-size: 4.2rem
      line-height: 110%
      margin: 2.1rem 0 2.1rem 0
      color: $primary

footer
  background: #f9a825
  padding: 15px 0

  p
    display: inline-block
    margin: 0
    color: rgba(255, 255 ,255 , 0.87)
    letter-spacing: 1px

  a
    float: right
    color: rgba(255, 255 ,255 , 0.87)
    padding-left: 10px

  a .fa-facebook-f:hover
    color: rgba(0, 0 ,0 , 0.87)

  a .fa-github:hover
    color: rgba(0, 0 ,0 , 0.87)

  a .fa-linkedin:hover
    color: rgba(0, 0 ,0 , 0.87)

#sidenav-overlay
  z-index: 0

@media screen and (max-width: 425px)
  .brand-logo
    font-size: 1.7rem !important

@media screen and (max-width: 400px)
  .links
    width: auto

@media screen and (max-width: 350px)
  .brand-logo
    font-size: 1.5rem !important
@media screen and (max-width: 310px)
  .brand-logo
    font-size: 1.3rem !important

